--- a/style.css
+++ b/style.css
@@ -35,3 +35,11 @@ a:visited, a:link {
 	text-align: center;
 	color: red;
 }
+
+.head1 {
+    text-align: center;
+}
+
+.head2 {
+    text-align: center;
+}
